# realtime-editor

./: Cargo.toml  LICENSE
doc/adr/: 001-websocket-protocol.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Editor.tsx
frontend/src/services/: websocket.ts
src/: app.rs  handler.rs  main.rs
