[package]
name = "realtime-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.47", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1.18", features = ["serde", "v4"]}
dashmap = { version = "7.0.0-rc2" }